Finalize base package: simplify to arcadedb-embedded with gRPC exclusion only
- Package renamed from arcadedb-embedded-minimal to arcadedb-embedded
- Simplified JAR filtering: exclude only gRPC wire protocol (38MB savings)
- Final package size: 123MB (down from 160MB, 23% reduction)
- All 43 tests passing with full functionality (SQL, Cypher, Gremlin, Studio, etc.)
- PyPI packages created: arcadedb-embedded and arcadedb-embedded-jre (dummy 0.0.1)
- GitHub Actions workflows updated for new package structure
- Trusted publisher OIDC configured and activated
- Documentation fully updated to remove old minimal/headless/full terminology
- Version extraction enhanced with dev/release mode support
- Build scripts updated to support future base/jre variants
- Implementation plan updated: JRE bundling now priority before release