@@ -1,122 +1,338 @@
-# Implementation Plan: JRE Bundling for ArcadeDB Python
+# Implementation Status: JRE Bundling Priority
 
-## Overview
-**Simplified Approach:** Modify existing project to focus only on minimal distribution, then add JRE variant.
+## 🚀 CURRENT FOCUS: JRE Bundling (Phase 0 - Local Prototype)
 
-**Current State:** 3 distributions (headless, minimal, full)
-**Target State:** 2 packages from minimal distribution only
-- `arcadedb-embed` - minimal distribution, requires system Java 21+
-- `arcadedb-embed-jre` - minimal distribution + bundled JRE
+**Priority:** Start with Phase 0 to validate JRE bundling approach locally before production release.
 
-## ✅ Decisions Made
+**Rationale:** JRE bundling is more important now - need to prototype and validate the approach before releasing base package to PyPI.
 
-1. **Start with existing project** - modify current build system
-2. **Focus on minimal only** - drop headless and full distributions
-3. **Two-step approach:**
-   - Step 1: Simplify to minimal-only, create new PyPI packages
-   - Step 2: Add JRE bundling variant
-4. **PyPI Strategy:** Create new packages immediately
+**Current Task:** Phase 0 - Local JRE Prototype (see detailed steps below in Phase 0 section)
 
 ---
 
-## ✅ Phase 1: Simplify to Minimal-Only (COMPLETED)
+## ✅ Base Package Complete - Deferred Release
+
+**Status:** All optimization, documentation, and release infrastructure tasks completed successfully.
+
+**Final Result:** Single 123MB package including all ArcadeDB features except gRPC wire protocol.
+
+**PyPI Setup:** ✅ Both packages created and trusted publishers activated
+- ✅ `arcadedb-embedded` - dummy 0.0.1 uploaded, ready for real releases
+- ✅ `arcadedb-embedded-jre` - dummy 0.0.1 uploaded, ready for real releases
+- ✅ GitHub Actions OIDC trusted publishing configured and activated
+
+**Deferred Action:** Create GitHub release after JRE variant is validated locally.
+
+## ✅ COMPLETED - Optimal Solution Achieved
+
+### What We Discovered
+
+Through systematic testing and analysis, we found the optimal approach:
+
+1. **Started with complex filtering** - Initially tried to exclude many components to minimize size
+2. **Found missing dependencies** - Discovered SmallRye CPU and other critical dependencies
+3. **Realized Cypher bundling** - Found that Cypher support is bundled within the Gremlin JAR
+4. **Achieved optimal balance** - Simplified to exclude only gRPC wire protocol (38MB savings)
+
+### Final Architecture
+
+**Included (123MB total):**
+- ✅ Core database engine
+- ✅ SQL, Cypher, Gremlin query engines
+- ✅ Studio web interface
+- ✅ HTTP, PostgreSQL, MongoDB, Redis wire protocols
+- ✅ Vector search and HNSW indexing
+- ✅ Import/export tools
+- ✅ All essential dependencies
+
+**Excluded (38MB saved):**
+- ❌ gRPC wire protocol only
+
+**Reason for gRPC exclusion:** We don't need gRPC at this moment, and we might add it in future versions if needed.
+
+### Implementation Details
+
+**JAR Filtering Logic (simplified):**
+```python
+# Only exclude gRPC wire protocol
+if "arcadedb-grpcw-" in jar_name:
+    excluded_jars.append(jar)
+else:
+    included_jars.append(jar)
+```
+
+**Test Results:** 43/43 tests passing (100% success rate)
+
+**Package Size:** 123MB (down from 160MB original size - 23% reduction)
+
+## ✅ Completed Tasks
+
+### ✅ Build System Simplification
+- [x] Removed complex `custom_jar_filter.py` (80+ lines)
+- [x] Simplified filtering to 3-line logic in `setup_jars.py`
+- [x] Updated build scripts to reflect simple gRPC exclusion
+- [x] Validated approach with comprehensive testing
+
+### ✅ Documentation Updates
+- [x] Updated root README.md package information
+- [x] Updated Python README.md distribution table
+- [x] Rewrote docs/getting-started/distributions.md
+- [x] Updated GitHub workflow comments
+- [x] Updated build script descriptions
+
+### ✅ Quality Assurance
+- [x] All 43 tests pass with simplified approach
+- [x] Cypher, SQL, Gremlin all working correctly
+- [x] Studio UI and server functionality validated
+- [x] Package size optimized (123MB vs 160MB)
+
+## Key Insights
+
+1. **Less is More:** Simple exclusion of one component (gRPC) achieved 23% size reduction
+2. **Bundled Dependencies:** Cypher support was hidden within Gremlin JAR - critical discovery
+3. **Test-Driven Approach:** Comprehensive testing revealed what was actually needed
+4. **Pragmatic Trade-offs:** Accepting larger package size for complete functionality was the right choice
+
+## Next Steps - JRE Bundling Now Priority
+
+The base package implementation is complete. Current priority:
+
+1. **🚀 JRE Bundling:** START NOW - Phase 0 Local Prototype (see detailed plan below)
+2. **gRPC Support:** Can be added back later if specifically requested by users
+3. **Platform Optimization:** Could explore platform-specific optimizations after JRE work
+
+## Success Metrics ✅
+
+- [x] Package under 130MB (achieved 123MB)
+- [x] All functionality preserved (43/43 tests)
+- [x] Simple, maintainable codebase
+- [x] Clear documentation and rationale
+- [x] Production-ready quality
+
+**Final Assessment:** Mission accomplished with optimal size/functionality balance.
+
+---
+
+## 🎯 PHASE 0: LOCAL JRE PROTOTYPE - START HERE
+
+**Priority: IMMEDIATE** - This is the current focus before any production releases.
+
+**🎯 Goal:** Validate JRE bundling approach locally before implementing CI/CD
+
+### 0.1 Create Prototype Branch
+
+- [ ] Create feature branch: `prototype-jre-bundling`
+- [ ] Work locally without CI/CD changes initially
+- [ ] Test core functionality before scaling to all platforms
+
+### 0.2 Local JRE Build Test ⭐ **START HERE**
+
+**Steps:**
+1. [ ] Install Temurin JDK 21 locally
+2. [ ] Run `jdeps` on current JAR files to identify required modules
+3. [ ] Create minimal JRE using `jlink` manually
+4. [ ] Test that minimal JRE can run ArcadeDB
+
+**Commands to test:**
+```bash
+# Step 1: Build current package (already done)
+cd bindings/python
+./build-all.sh base
+
+# Step 2: Analyze JAR dependencies
+mkdir -p prototype/analysis
+cd prototype/analysis
+jdeps --multi-release 21 --print-module-deps ../../src/arcadedb_embedded/jars/*.jar > required-modules.txt
+
+# Step 3: Build minimal JRE
+jlink --module-path $JAVA_HOME/jmods \
+      --add-modules $(cat required-modules.txt) \
+      --strip-debug --no-man-pages --no-header-files --compress=2 \
+      --output ./minimal-jre
+
+# Step 4: Test minimal JRE
+./minimal-jre/bin/java -version
+```
+
+**Success criteria:**
+- [ ] `jdeps` identifies all required modules
+- [ ] `jlink` creates minimal JRE (~40-70 MB)
+- [ ] Minimal JRE can run `java -version`
+- [ ] Minimal JRE can run basic JPype operations
+
+### 0.3 Local Package Prototype
+
+**Create prototype structure:**
+```
+prototype/
+├── base-package/          # arcadedb-embedded (no JRE)
+│   └── arcadedb_embedded/
+│       ├── jars/          # JAR files
+│       └── ...            # Python files
+└── jre-package/           # arcadedb-embedded-jre (with JRE)
+    └── arcadedb_embedded/
+        ├── jars/          # JAR files
+        ├── jre/           # Bundled minimal JRE
+        └── ...            # Python files
+```
+
+**Steps:**
+1. [ ] Create prototype directory structure
+2. [ ] Copy current Python source to both variants
+3. [ ] Copy minimal JRE to JRE variant
+4. [ ] Update `jvm.py` to detect bundled JRE
+5. [ ] Test both variants locally
+
+### 0.4 Local Testing
+
+**Test scenarios:**
+- [ ] **Base variant + system Java:** Should work normally
+- [ ] **Base variant + no Java:** Should fail with helpful error
+- [ ] **JRE variant + system Java:** Should prefer bundled JRE
+- [ ] **JRE variant + no Java:** Should work with bundled JRE
+- [ ] **Size check:** JRE variant should be ~150 MB total
+
+**Test script:**
+```bash
+#!/bin/bash
+# prototype/test-variants.sh
+
+# Test base variant
+echo "Testing base variant..."
+cd base-package
+python -c "import arcadedb_embedded; print('Base variant works!')"
+
+# Test JRE variant (hide system Java)
+echo "Testing JRE variant..."
+cd ../jre-package
+unset JAVA_HOME
+export PATH="/usr/bin:/bin"  # Remove Java from PATH
+python -c "import arcadedb_embedded; print('JRE variant works!')"
+```
+
+### 0.5 Prototype Validation
+
+**Success criteria before proceeding:**
+- [ ] Both variants install and import successfully
+- [ ] JRE variant works without system Java
+- [ ] JRE size is acceptable (~40-70 MB)
+- [ ] Database operations work in both variants
+- [ ] Can create database, insert data, query data
+- [ ] No performance degradation vs current base package
+
+**If prototype fails:**
+- Debug JRE module selection
+- Test different `jlink` options
+- Consider alternative approaches
+- Document issues and solutions
+
+**When prototype succeeds:**
+- Proceed to Phase 1 (Build System Changes)
+- Document findings and lessons learned
+- Update CI/CD implementation plan based on prototype results
+
+---
+
+## Original Plan Archive - Base Package (COMPLETED)
+
+## ✅ Phase 1: Simplified JAR Filtering (COMPLETED)
 
 ### ✅ 1.1 Update Build Scripts
 
-**Goal:** Remove headless and full support, keep only minimal
+**Goal:** Implement custom JAR inclusion logic with gRPC exclusion
 
 **Files to modify:**
-- [x] `build-all.sh` - Remove headless/full options, default to minimal
-- [x] `Dockerfile.build` - Remove headless/full stages, use only minimal image
-- [x] `setup_jars.py` - Remove distribution logic, always use minimal
+- [x] `build-all.sh` - Remove distribution options, use custom filtering
+- [x] `Dockerfile.build` - Use custom JAR filtering logic
+- [x] `setup_jars.py` - Implement simple gRPC exclusion logic
 
 ### ✅ 1.2 Update `build-all.sh`
 
 **Current logic:**
 ```bash
-DISTRIBUTION="${1:-all}"
-# Supports: all, headless, minimal, full
+VARIANT="${1:-base}"
+# Supports: base (without JRE), jre (with JRE - coming later)
 ```
 
 **New logic:**
 ```bash
 VARIANT="${1:-base}"
-# Supports: base (minimal without JRE), jre (minimal with JRE - coming later)
+# Supports: base (without JRE), jre (with JRE - coming later)
 ```
 
 **Changes:**
 - [x] Replace `DISTRIBUTION` with `VARIANT`
-- [x] Remove headless/full validation
-- [x] Always use minimal ArcadeDB image
+- [x] Remove distribution validation
+- [x] Always use custom JAR filtering
 - [x] Update help text and examples
 - [x] For now, only support `base` variant (JRE comes in Phase 2)
 
 ### ✅ 1.3 Update `Dockerfile.build`
 
-**Current:** Multi-stage with 3 ArcadeDB images
-**New:** Single stage using only minimal image
+**Current:** Multi-stage with custom JAR filtering
+**New:** Single stage using custom JAR inclusion logic
 
 **Changes:**
 - [x] Remove `java-builder-full` and `java-builder-headless` stages
-- [x] Keep only `arcadedata/arcadedb-minimal:${ARCADEDB_TAG}` as source
+- [x] Keep only `arcadedata/arcadedb:${ARCADEDB_TAG}` as source (full distribution)
 - [x] Remove `DISTRIBUTION` build arg
 - [x] Simplify package naming logic
-- [x] Update to build `arcadedb-embed` (prepare for future `arcadedb-embed-jre`)
+- [x] Update to build `arcadedb-embedded` (prepare for future `arcadedb-embedded-jre`)
 
 ### ✅ 1.4 Update `setup_jars.py`
 
 **Current:** Reads `ARCADEDB_DISTRIBUTION` env var
-**New:** Always minimal, prepare for JRE variant
+**New:** Custom JAR filtering with gRPC exclusion
 
 **Changes:**
 - [x] Remove distribution selection logic
-- [x] Always use minimal JAR set
+- [x] Always use custom filtering (exclude only gRPC)
 - [x] Add placeholder for future JRE copying logic
 - [x] Update package size reporting
 
 ### ✅ 1.5 Update `pyproject.toml`
 
 **Current:** Dynamic package name based on distribution
-**New:** Default to `arcadedb-embed`, prepare for `arcadedb-embed-jre`
+**New:** Default to `arcadedb-embedded`, prepare for `arcadedb-embedded-jre`
 
 **Changes:**
-- [x] Change default name to `arcadedb-embed`
-- [x] Update description to focus on minimal distribution
+- [x] Change default name to `arcadedb-embedded`
+- [x] Update description to reflect custom JAR filtering
 - [x] Keep dynamic naming for future JRE variant
 
 ---
 
 ## ✅ Phase 2: Create PyPI Packages (READY TO START)
 
-### 2.1 Set up PyPI Projects
+### ✅ PyPI Setup
 
 **Create two new PyPI projects:**
 
-1. **`arcadedb-embed`**
-   - Minimal distribution (Studio + core)
+1. **`arcadedb-embedded`** ✅ COMPLETED
+   - Custom JAR filtering (excludes only gRPC)
    - Requires Java 21+
-   - ~97 MB package size
+   - ~123 MB package size
 
-2. **`arcadedb-embed-jre`**
+2. **`arcadedb-embedded-jre`** ✅ COMPLETED
    - Same as above + bundled JRE
    - No Java installation required
-   - ~150 MB per platform (coming later)
+   - ~170 MB per platform (coming later)
 
 **Actions:**
-- [ ] Create PyPI account/access for both packages
-- [ ] Reserve package names on PyPI
-- [ ] Set up package descriptions and metadata
-- [ ] Prepare for first uploads
+- [x] Create PyPI account/access for both packages ✅ DONE
+- [x] Reserve package names on PyPI ✅ DONE (dummy 0.0.1 uploaded)
+- [x] Set up package descriptions and metadata ✅ DONE
+- [x] Prepare for first uploads ✅ DONE (trusted publishers activated)
 
-### 2.2 GitHub Environments
+### ✅ GitHub Environments
 
 **Create GitHub environments for new packages:**
-- [ ] `pypi-base` - for publishing `arcadedb-embed`
-- [ ] `pypi-jre` - for publishing `arcadedb-embed-jre` (future)
+- [x] `pypi-base` - for publishing `arcadedb-embedded` ✅ CONFIGURED
+- [x] `pypi-jre` - for publishing `arcadedb-embedded-jre` (future) ✅ CONFIGURED
 
 **Keep old environments temporarily:**
-- [ ] Keep `pypi-minimal` for transition period
-- [ ] Plan deprecation of `pypi-headless` and `pypi-full`
+- [x] Keep `pypi-minimal` for transition period ✅ MAINTAINED
+- [x] Plan deprecation of old environments ✅ PLANNED
 
 ---
 
@@ -125,20 +341,20 @@ VARIANT="${1:-base}"
 ### ✅ 3.1 Update Test Workflows
 
 **`test-python-bindings.yml`:**
-- [x] Remove distribution matrix (headless, minimal, full)
-- [x] Test only the minimal-based package
+- [x] Remove distribution matrix (old approach)
+- [x] Test only the custom JAR filtering package
 - [x] Update artifact names to `wheel-base`
 - [x] Simplify workflow dispatch options
 
 **`test-python-examples.yml`:**
-- [x] No changes needed (already uses minimal)
+- [x] No changes needed (already uses current approach)
 - [x] Update wheel file pattern if needed
 
 ### ✅ 3.2 Update Release Workflow
 
 **`release-python-packages.yml`:**
 - [x] Remove 3-distribution build matrix
-- [x] Add single build job for `arcadedb-embed` (base variant)
+- [x] Add single build job for `arcadedb-embedded` (base variant)
 - [x] Add publish job for new PyPI package
 - [x] Keep old publish jobs for final deprecation releases
 
@@ -146,7 +362,7 @@ VARIANT="${1:-base}"
 ```yaml
 jobs:
   build-base:
-    # Build arcadedb-embed package
+    # Build arcadedb-embedded package
 
   publish-base:
     # Publish to new pypi-base environment
@@ -162,10 +378,10 @@ jobs:
 ### ✅ 4.1 Test New Package
 
 **Local testing:**
-- [x] Build new `arcadedb-embed` package
+- [x] Build new `arcadedb-embedded` package
 - [x] Install and test locally
 - [x] Verify it works with existing examples
-- [x] Check package size (~97 MB confirmed)
+- [x] Check package size (~123 MB confirmed)
 
 **CI testing:**
 
@@ -175,7 +391,7 @@ jobs:
 
 ### 4.2 First Release
 
-**Release `arcadedb-embed` v1:**
+**Release `arcadedb-embedded` v25.9.1:**
 - [ ] Create GitHub release with appropriate tag
 - [ ] Upload to new PyPI package
 - [ ] Verify installation from PyPI works
@@ -183,29 +399,30 @@ jobs:
 
 ---
 
-## ✅ Phase 5: Deprecation and Migration (DOCUMENTATION UPDATED)
+## ✅ Phase 5: Deprecation and Migration (COMPLETED)
 
 ### ✅ 5.1 Deprecate Old Packages
 
 **Upload final releases to old packages:**
-- [ ] `arcadedb-embedded-headless` - final release with deprecation notice
-- [ ] `arcadedb-embedded-minimal` - final release pointing to `arcadedb-embed`
-- [ ] `arcadedb-embedded` (full) - final release with deprecation notice
 
-**Deprecation messages:**
-```
-⚠️ DEPRECATED: This package has been replaced by `arcadedb-embed`.
-Please update your dependencies:
-  pip install arcadedb-embed
-Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/MIGRATION.md
-```
+- [x] `arcadedb-embedded-minimal` - removed from PyPI
+- [x] Other legacy packages - removed from PyPI
+
+**Clean removal approach:**
+
+- Old packages completely removed from PyPI instead of deprecation releases
+- Repository completely cleaned of all "minimal", "headless", "full" terminology
+- All references updated to single `arcadedb-embedded` package approach
 
 ### ✅ 5.2 Update Documentation
 
 **Create migration guide:**
+
 - [x] `MIGRATION.md` - How to switch from old packages
 - [x] Update main `README.md` - Reference new package names
 - [x] Update examples and tutorials
+- [x] All documentation files cleaned of outdated terminology
+- [x] Fixed formatting issues across all documentation
 
 ---
 
@@ -214,7 +431,7 @@ Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/M
 **After Phase 1-5 are complete and stable:**
 
 ### 6.1 Local JRE Prototype
-- [ ] Analyze minimal distribution with `jdeps`
+- [ ] Analyze current package with `jdeps`
 - [ ] Build minimal JRE with `jlink`
 - [ ] Test JRE variant locally
 
@@ -224,7 +441,7 @@ Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/M
 - [ ] Update CI/CD for platform-specific wheels
 
 ### 6.3 Release JRE Variant
-- [ ] Release `arcadedb-embed-jre` for all platforms
+- [ ] Release `arcadedb-embedded-jre` for all platforms
 - [ ] Full testing across platforms
 
 ---
@@ -232,10 +449,10 @@ Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/M
 ## Timeline
 
 ### **✅ Phase 1-5: Core Transition (COMPLETED)**
-- **✅ Day 1:** Simplify build system to minimal-only
+- **✅ Day 1:** Simplify build system with custom JAR filtering
 - **✅ Day 2:** Set up PyPI packages and GitHub environments
 - **✅ Day 3:** Update CI/CD workflows
-- **✅ Day 4:** Test and release first `arcadedb-embed` package
+- **✅ Day 4:** Test and release first `arcadedb-embedded` package
 - **✅ Day 5:** Deprecate old packages, update documentation
 
 ### **Phase 6: JRE Bundling (Future - 2-3 weeks)**
@@ -261,7 +478,8 @@ Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/M
 - [x] Update package naming scheme
 
 ### **✅ Phase 1.5: Test and validate** - COMPLETED
-- [x] Build new `arcadedb-embed` package (~97 MB)
+
+- [x] Build new `arcadedb-embedded` package (~97 MB)
 - [x] All 43 tests pass (includes Cypher and Gremlin support)
 - [x] Documentation updated
 
@@ -269,12 +487,12 @@ Migration guide: https://github.com/humemai/arcadedb-embedded-python/blob/main/M
 
 **Next immediate step:**
 1. **Phase 2.1: Set up PyPI packages**
-   - Go to PyPI and reserve: `arcadedb-embed`, `arcadedb-embed-jre`
+   - Go to PyPI and reserve: `arcadedb-embedded`, `arcadedb-embedded-jre`
    - Configure GitHub environments: `pypi-base`, `pypi-jre`
 
 ### **Success Criteria for Phase 1-5:** ✅ **ACHIEVED**
 
-- [x] `arcadedb-embed` package builds successfully
+- [x] `arcadedb-embedded` package builds successfully
 - [x] All existing functionality preserved (43/43 tests pass)
 - [x] Users can build and test same API
 - [x] CI/CD simplified and working
@@ -332,11 +550,11 @@ jlink --module-path $JAVA_HOME/jmods \
 **Create prototype structure:**
 ```
 prototype/
-├── base-package/          # arcadedb-embed (no JRE)
+├── base-package/          # arcadedb-embedded (no JRE)
 │   └── arcadedb_embedded/
 │       ├── jars/          # JAR files
 │       └── ...            # Python files
-└── jre-package/           # arcadedb-embed-jre (with JRE)
+└── jre-package/           # arcadedb-embedded-jre (with JRE)
     └── arcadedb_embedded/
         ├── jars/          # JAR files
         ├── jre/           # Bundled minimal JRE
@@ -490,6 +708,7 @@ jlink --module-path $JAVA_HOME/jmods \
 - `find_jre_directory()` - locate bundled JRE
 - `copy_jre_to_package()` - copy JRE to package
 
+
 ---
 
 ### 1.5 Update `pyproject.toml`
@@ -498,20 +717,20 @@ jlink --module-path $JAVA_HOME/jmods \
 **New:** Same approach, but only two package names
 
 **Changes needed:**
-- [ ] Update default `name` to `arcadedb-embed`
+- [ ] Update default `name` to `arcadedb-embedded`
 - [ ] Update build script to use either:
-  - `arcadedb-embed` (base variant)
-  - `arcadedb-embed-jre` (with JRE)
+  - `arcadedb-embedded` (base variant)
+  - `arcadedb-embedded-jre` (with JRE)
 - [ ] Update package descriptions
 - [ ] Keep all other metadata the same
 
 **Package naming logic in build:**
 ```bash
 if [ "$INCLUDE_JRE" = "true" ]; then
-    PACKAGE_NAME="arcadedb-embed-jre"
+    PACKAGE_NAME="arcadedb-embedded-jre"
     DESCRIPTION="ArcadeDB embedded Python bindings with bundled Java 21 runtime (turnkey installation)"
 else
-    PACKAGE_NAME="arcadedb-embed"
+    PACKAGE_NAME="arcadedb-embedded"
     DESCRIPTION="ArcadeDB embedded Python bindings (requires Java 21+)"
 fi
 ```
@@ -529,7 +748,7 @@ fi
 - [ ] Add function to detect bundled JRE: `get_bundled_jre_path()`
 - [ ] Modify `start_jvm()` to prefer bundled JRE
 - [ ] Add better error messages distinguishing between:
-  - No bundled JRE, no system Java → suggest `arcadedb-embed-jre`
+  - No bundled JRE, no system Java → suggest `arcadedb-embedded-jre`
   - JRE found but JVM startup failed → other error
 - [ ] Add JRE version checking (ensure 21+)
 
@@ -561,7 +780,7 @@ def start_jvm():
         except:
             raise ArcadeDBError(
                 "No Java runtime found. Either install Java 21+ or use "
-                "'arcadedb-embed-jre' package which includes bundled JRE."
+                "'arcadedb-embedded-jre' package which includes bundled JRE."
             )
 ```
 
@@ -836,7 +1055,7 @@ jobs:
 
 ```yaml
   publish-base:
-    name: Publish arcadedb-embed to PyPI
+    name: Publish arcadedb-embedded to PyPI
     needs: [check-release, build-base]
     if: needs.check-release.outputs.is-python-release == 'true'
     runs-on: ubuntu-latest
@@ -854,7 +1073,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@...
 
   publish-jre:
-    name: Publish arcadedb-embed-jre to PyPI (All Platforms)
+    name: Publish arcadedb-embedded-jre to PyPI (All Platforms)
     needs: [check-release, build-jre]
     if: needs.check-release.outputs.is-python-release == 'true'
     runs-on: ubuntu-latest
@@ -912,7 +1131,7 @@ jobs:
 - [ ] **Verify:** Documentation references new package names (handled in Phase 4)
 
 **Minor updates:**
-- Update any hardcoded references to `arcadedb-embedded-minimal` → `arcadedb-embed`
+- Update any hardcoded references to `arcadedb-embedded-minimal` → `arcadedb-embedded`
 - Ensure docs build process picks up new package names
 
 ---
@@ -961,16 +1180,16 @@ jobs:
 Create in GitHub Settings → Environments:
 
 1. **`pypi-base`**
-   - For publishing `arcadedb-embed` package
+   - For publishing `arcadedb-embedded` package
    - Add PyPI trusted publisher (GitHub Actions OIDC)
    - Configure for repository: humemai/arcadedb-embedded-python
-   - Package: arcadedb-embed
+   - Package: arcadedb-embedded
 
 2. **`pypi-jre`**
-   - For publishing `arcadedb-embed-jre` package
+   - For publishing `arcadedb-embedded-jre` package
    - Add PyPI trusted publisher (GitHub Actions OIDC)
    - Configure for repository: humemai/arcadedb-embedded-python
-   - Package: arcadedb-embed-jre
+   - Package: arcadedb-embedded-jre
 
 **Old environments (deprecate after final release):**
 - `pypi-headless` - Keep for final deprecation release
@@ -1011,8 +1230,8 @@ Create in GitHub Settings → Environments:
 ```markdown
 | Variant | Size | JRE Included | Java Required | Use Case |
 |---------|------|--------------|---------------|----------|
-| arcadedb-embed | ~97 MB | ❌ | Java 21+ | Production with existing Java |
-| arcadedb-embed-jre | ~150 MB | ✅ (per platform) | ❌ | Turnkey, no Java setup |
+| arcadedb-embedded | ~97 MB | ❌ | Java 21+ | Production with existing Java |
+| arcadedb-embedded-jre | ~150 MB | ✅ (per platform) | ❌ | Turnkey, no Java setup |
 ```
 
 ---
@@ -1022,8 +1241,8 @@ Create in GitHub Settings → Environments:
 **New file:** `bindings/python/MIGRATION.md`
 
 **Content:**
-- [ ] Migration from `arcadedb-embedded-headless` → `arcadedb-embed`
-- [ ] Migration from `arcadedb-embedded-minimal` → `arcadedb-embed`
+- [ ] Migration from `arcadedb-embedded-headless` → `arcadedb-embedded`
+- [ ] Migration from `arcadedb-embedded-minimal` → `arcadedb-embedded`
 - [ ] Migration from `arcadedb-embedded` (full) → not supported (suggest alternatives)
 - [ ] When to choose which new variant
 - [ ] Breaking changes (if any)
@@ -1047,13 +1266,13 @@ Create in GitHub Settings → Environments:
 
 **Chosen Approach: Clean Break (Option A)**
 - Mark `arcadedb-embedded-headless`, `arcadedb-embedded-minimal`, `arcadedb-embedded` as deprecated
-- Create new packages: `arcadedb-embed`, `arcadedb-embed-jre`
+- Create new packages: `arcadedb-embedded`, `arcadedb-embedded-jre`
 - Provide clear migration guide
 - Pros: Clean break, clearer naming ✅
 - Cons: Users need to update dependencies (acceptable)
 
 **Actions needed:**
-- [x] Create new PyPI projects: `arcadedb-embed`, `arcadedb-embed-jre` ✅ **Confirmed approach**
+- [x] Create new PyPI projects: `arcadedb-embedded`, `arcadedb-embedded-jre` ✅ **Confirmed approach**
 - [x] Upload final release to old packages with deprecation notice ✅ **Clean deprecation**
 - [x] Add PyPI classifiers: "Development Status :: 7 - Inactive" on old packages ✅ **Clear signal**
 - [x] Update old package descriptions with migration info ✅ **Help users migrate**
@@ -1068,8 +1287,8 @@ Create in GitHub Settings → Environments:
 - `pypi-full`
 
 **New environments:**
-- [ ] Create: `pypi-base` (for `arcadedb-embed`)
-- [ ] Create: `pypi-jre` (for `arcadedb-embed-jre`)
+- [ ] Create: `pypi-base` (for `arcadedb-embedded`)
+- [ ] Create: `pypi-jre` (for `arcadedb-embedded-jre`)
 - [ ] Keep old ones temporarily for final deprecation releases
 
 ---
@@ -1184,9 +1403,10 @@ Create in GitHub Settings → Environments:
 
 ---
 
-## Timeline Estimate ✅ **UPDATED WITH PROTOTYPE-FIRST APPROACH**
+## Timeline Estimate ✅ **UPDATED: JRE BUNDLING IS NOW PRIORITY**
 
-### Phase 0: Local Prototype (3-5 days) ⭐ **START HERE**
+### Phase 0: Local Prototype (3-5 days) ⭐ **CURRENT FOCUS - START NOW**
+
 - Day 1: Set up prototype environment, run `jdeps` analysis
 - Day 2: Build minimal JRE with `jlink`, test locally
 - Day 3: Create prototype packages (base + JRE variants)
@@ -1194,42 +1414,49 @@ Create in GitHub Settings → Environments:
 - Day 5: Document findings, proceed or adjust approach
 
 ### Phase 1: Build System (1 week) ⭐ **AFTER PROTOTYPE VALIDATION**
+
 - Day 1-2: Update build scripts based on prototype learnings
 - Day 3-4: Create JRE build process in Docker
 - Day 5: Update Docker files
 - Day 6-7: Local testing with Docker builds
 
 ### Phase 2: Python Package (3 days)
+
 - Day 1: Update jvm.py with bundled JRE detection
 - Day 2: Package structure changes
 - Day 3: Local testing
 
 ### Phase 3: CI/CD (1 week)
+
 - Day 1-3: Multi-platform build workflow
 - Day 4-5: Update release workflow
 - Day 6-7: Update test workflows
 
 ### Phase 4: Documentation (2 days)
+
 - Day 1: Update all docs
 - Day 2: Create migration guide
 
 ### Phase 5: PyPI Setup (1 day)
-- Create new PyPI projects
-- Configure environments
+
+- Already complete for base package
+- Configure for JRE package when ready
 
 ### Phase 6: Full Platform Testing (5 days) ⭐ **CRITICAL**
+
 - Day 1-2: Test on Linux (x64 + ARM64)
 - Day 3: Test on macOS (x64 + ARM64)
 - Day 4: Test on Windows x64
 - Day 5: Fix issues, validate all platforms
 
 ### Phase 7: Release (1 day)
+
 - Final checks
-- Release
+- Release both packages together
 - Announcement
 
 **Total: ~4 weeks (with prototype-first approach)**
-**Critical Path: Prototype → Build System → Full Platform Testing**
+**Critical Path: Prototype (NOW) → Build System → Full Platform Testing → Release**
 
 ---
 
@@ -1265,30 +1492,31 @@ Create in GitHub Settings → Environments:
 - [x] No user-reported platform-specific issues in first month ✅ **Full platform testing before release**
 - [x] Migration guide used by >50% of users ✅ **Clean break with clear migration path**
 
-## Next Steps 🚀
+## Next Steps 🚀 - JRE BUNDLING PRIORITY
 
 ### **Immediate Action Items:**
 
-1. **✅ START WITH PROTOTYPE** (Phase 0)
+1. **🚀 START NOW: Phase 0 - Local JRE Prototype**
    - Create `prototype-jre-bundling` branch
-   - Install JDK 21 locally
-   - Run `jdeps` analysis on current minimal distribution
+   - Install JDK 21 locally (if not already installed)
+   - Run `jdeps` analysis on current JAR files
    - Build minimal JRE with `jlink`
-   - Create prototype packages
-   - Validate approach locally
+   - Create prototype packages (base + JRE variants)
+   - Validate approach locally with comprehensive testing
 
 2. **After successful prototype:**
    - Proceed with Phase 1 (Build System Changes)
    - Update Docker builds
    - Implement CI/CD for 5 platforms
-   - Full testing and release
+   - Full testing and release BOTH packages together
 
 ### **Key Validation Points:**
 
 - **Prototype success:** JRE variant works without system Java
 - **Size validation:** JRE variant ≤150 MB total
-- **Platform testing:** All 5 platforms work correctly
-- **Migration validation:** Old users can easily switch
+- **Performance validation:** No degradation vs base package
+- **Platform testing:** All 5 platforms work correctly (after prototype)
+- **User experience:** Clear installation and error messages
 
 ### **Risk Mitigation:**
 
@@ -1296,7 +1524,16 @@ Create in GitHub Settings → Environments:
 - **If size too large:** Optimize JRE further, request PyPI limit increase
 - **If platform issues:** Fall back to fewer platforms initially
 
-**Ready to start with Phase 0 (Local Prototype)?** 🎯
+**Ready to start Phase 0 (Local JRE Prototype)?** 🎯
+
+**First command to run:**
+```bash
+cd bindings/python
+mkdir -p prototype/analysis
+cd prototype/analysis
+jdeps --multi-release 21 --print-module-deps ../../src/arcadedb_embedded/jars/*.jar > required-modules.txt
+cat required-modules.txt
+```
 
 ---
 
